Push project GitLub

--- a/Traceabilty_Flex/App.config
+++ b/Traceabilty_Flex/App.config
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="MailSvc" value="http://mignt100.europe.ad.flextronics.com/Service/message.asp" />
-    <add key="MailTo" value="Jonathan.Shapira; Omri.Shefer" />
-    <add key="MailCC" value ="Karen.Enker; Shahar.Reem; nir.palmor"/>
-    <add key="pat" value="\d{10}\/\d{4}" />
-    <add key="pat1" value="^\d{10}\z" />
-    <add key="MyHost" value="migm0664,migm0561,mignt100,migm0636,mignt056" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="Asm.As.Oib.SiplacePro.Optimizer.Proxy.Endpoint" value="net.tcp://10.229.5.51:1406/Asm.As.Oib.SiplacePro.Optimizer" />
+    <add key="MailSvc" value="http://mignt100.europe.ad.flextronics.com/Service/message.asp"/>
+    <add key="MailTo" value="Jonathan.Shapira; Omri.Shefer"/>
+    <add key="MailCC" value="Karen.Enker; Shahar.Reem; nir.palmor"/>
+    <add key="pat" value="\d{10}\/\d{4}"/>
+    <add key="pat1" value="^\d{10}\z"/>
+    <add key="MyHost" value="migm0664,migm0561,mignt100,migm0636,mignt056,migm0515"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="Asm.As.Oib.SiplacePro.Optimizer.Proxy.Endpoint" value="net.tcp://10.229.5.51:1406/Asm.As.Oib.SiplacePro.Optimizer"/>
     
     
-    <add key="Asm.As.Oib.SiplacePro.Optimizer.Proxy.CallbackEndpointBase" value="net.tcp://localhost:1406/Asm.As.Oib.siplaceprotestapp" />
+    <add key="Asm.As.Oib.SiplacePro.Optimizer.Proxy.CallbackEndpointBase" value="net.tcp://localhost:1406/Asm.As.Oib.siplaceprotestapp"/>
     
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBindingConfig" closeTimeout="00:10:00" openTimeout="00:10:00" receiveTimeout="infinite" sendTimeout="01:00:00" bypassProxyOnLocal="true" useDefaultWebProxy="false" maxReceivedMessageSize="2000000000">
-          <reliableSession enabled="false" />
-          <security mode="None" />
+        <binding name="WSHttpBindingConfig" closeTimeout="00:10:00" openTimeout="00:10:00" receiveTimeout="10675199.02:48:05.4775807" sendTimeout="01:00:00" bypassProxyOnLocal="true" useDefaultWebProxy="false" maxReceivedMessageSize="2000000000">
+          <reliableSession enabled="false"/>
+          <security mode="None"/>
         </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://mignt048:1405/Asm.As.Oib.WS.Eventing.Services/SubscriptionManager" binding="wsHttpBinding" bindingConfiguration="WSHttpBindingConfig" contract="schemas.xmlsoap.org.ws._2004._08.eventing.ISubscriptionManager" name="WSHttpBinding_IWSEventing" />
+      <endpoint address="http://smtoib:1405/Asm.As.Oib.WS.Eventing.Services/SubscriptionManager" binding="wsHttpBinding" bindingConfiguration="WSHttpBindingConfig" contract="schemas.xmlsoap.org.ws._2004._08.eventing.ISubscriptionManager" name="WSHttpBinding_IWSEventing"/>
     </client>
     <services>
-      <service behaviorConfiguration="TraceabilityBehavior" name="TraceabilityTestGui.TraceabilityOibServiceReceiver">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="WSHttpBindingConfig" contract="www.siplace.com.OIB._2012._03.Traceability.Contracts.Service.ITraceabilityDataDuplex" />
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      <service behaviorConfiguration="TraceabilityBehavior" name="Traceabilty_Flex.TraceabilityOibServiceReceiver">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="WSHttpBindingConfig" contract="www.siplace.com.OIB._2012._03.Traceability.Contracts.Service.ITraceabilityDataDuplex"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <!-- <add baseAddress="http://migm0664:33333/TraceabilityService"/>-->
+            <!-- <add baseAddress="http://migm0664:33333/TraceabilityServiceGUI"/>-->
           </baseAddresses>
         </host>
       </service>
@@ -43,8 +43,8 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="TraceabilityBehavior">
-          <serviceMetadata httpGetEnabled="True" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceMetadata httpGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -52,12 +52,12 @@
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
       </providers>
     </roleManager>
   </system.web>
