--- a/Traceabilty_Flex/Traceabilty_Flex.csproj
+++ b/Traceabilty_Flex/Traceabilty_Flex.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>351</ApplicationRevision>
+    <ApplicationRevision>363</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -189,6 +189,8 @@
     <Compile Include="Classes\ErrorsAndMessages.cs" />
     <Compile Include="Classes\FillRecipes.cs" />
     <Compile Include="Classes\LineControlSubscription.cs" />
+    <Compile Include="Classes\SQLdb.cs" />
+    <Compile Include="Classes\traceDB.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
