Add function isBoardDubleSided and line to message cause

--- a/Traceabilty_Flex/Traceabilty_Flex.csproj
+++ b/Traceabilty_Flex/Traceabilty_Flex.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Classes\ErrorsAndMessages.cs" />
     <Compile Include="Classes\FillRecipes.cs" />
     <Compile Include="Classes\LineControlSubscription.cs" />
+    <Compile Include="Classes\SiplacePro.cs" />
     <Compile Include="Classes\SQLdb.cs" />
     <Compile Include="Classes\traceDB.cs" />
     <Compile Include="Login.xaml.cs">
